--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -43,3 +43,28 @@
     transform: scale(0.8);
     box-shadow: 0 0 5px black;
 }
+
+.todos{
+    display:flex;
+    justify-content: space-evenly;
+    width:90%;
+    flex-wrap: wrap;
+    flex-direction: column;
+
+}
+
+.singleToDo{
+    display:flex;
+    width:300px;
+    height:50px;
+    background-color: yellow;
+    color: brown;
+    border-radius: 20px;
+    box-shadow: 0 0 10px solid black;
+    font-size: 20px;
+    margin-top: 20px;
+    align-items: center;
+    text-align: left;
+    font-weight: bolder;
+    padding:10px
+}
